--- a/parameters/Cargo.toml
+++ b/parameters/Cargo.toml
@@ -33,8 +33,9 @@ path = "../utilities"
 version = "0.9.0"
 
 [dependencies.aleo-std]
-version = "0.1.14"
+version = "0.1.15"
 default-features = false
+features = ["storage"]
 
 [dependencies.anyhow]
 version = "1"
