--- a/utilities/Cargo.toml
+++ b/utilities/Cargo.toml
@@ -32,6 +32,7 @@ optional = true
 version = "0.1.14"
 optional = true
 default-features = false
+features = ["cpu"]
 
 [dependencies.anyhow]
 version = "1.0"
