--- a/algorithms/Cargo.toml
+++ b/algorithms/Cargo.toml
@@ -139,6 +139,10 @@ features = [ "const_generics", "const_new" ]
 [dependencies.thiserror]
 version = "1.0"
 
+[dependencies.tokio-rayon]
+version = "2.1.0"
+optional = true
+
 [dependencies.wasm-bindgen-futures]
 version = "0.4"
 optional = true
@@ -176,7 +180,10 @@ wasm = [
   "snark",
   "wasm-bindgen-futures"
 ]
-cuda = [ "snarkvm-cuda" ]
+cuda = [
+  "snarkvm-cuda",
+  "tokio-rayon"
+]
 parallel = [
   "rayon",
   "snarkvm-fields/parallel",
